k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: soquery
  labels:
    app: soquery
spec:
  selector:
    app: soquery
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
